Make sure token extra test is legible...

--- a/src/assets/styles/explorer.scss
+++ b/src/assets/styles/explorer.scss
@@ -179,6 +179,13 @@ body {
   line-height: 13px;
 }
 
+.h-is-text-size-4 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+}
+
 .h-is-property-text {
   font-style: normal;
   font-weight: normal;
